feat: add test package

--- a/packages/pkg1/package.json
+++ b/packages/pkg1/package.json
@@ -25,5 +25,6 @@
   },
   "bugs": {
     "url": "https://github.com/Ka-Houl/lerna_package/issues"
-  }
+  },
+  "gitHead": "8b92a137492b459d467c306d507a29181545e5ef"
 }
