--- a/packages/pkg2/package.json
+++ b/packages/pkg2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kh-lerna-pkg2",
-  "version": "0.0.2",
+  "version": "0.0.3-alpha.0",
   "description": "> TODO: description",
   "author": "Ka-Houl <646676256@qq.com>",
   "homepage": "https://github.com/Ka-Houl/lerna_package#readme",
