--- a/packages/pkg1/package.json
+++ b/packages/pkg1/package.json
@@ -14,7 +14,7 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npm.taobao.org"
+    "registry": "https://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,5 @@
   "bugs": {
     "url": "https://github.com/Ka-Houl/lerna_package/issues"
   },
-  "gitHead": "5782a5a14a82a7ae14759ab742d0b48fabd8ab2e"
+  "gitHead": "920383b849974c2d1a7ee93d60245b15801c615a"
 }
